# FakeNewsChecker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  FunctionalSpec.md  README.md  README_LLM.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.playwright-mcp/: page-2026-05-09T12-14-26-737Z.yml  page-2026-05-09T12-14-48-375Z.yml  page-2026-05-09T12-16-57-781Z.yml  page-2026-05-09T13-08-27-097Z.yml  page-2026-05-09T13-15-27-268Z.yml  page-2026-05-09T13-16-15-067Z.yml  page-2026-05-09T13-19-11-334Z.yml  page-2026-05-09T13-33-12-986Z.yml  page-2026-05-09T13-33-40-745Z.yml
.sisyphus/: boulder.json
.sisyphus/plans/: ui-backend-skeleton.md
app/: __init__.py  artifact_store.py  cache_store.py  claude_analyzer.py  config.py  database.py  dependencies.py  gemini_analyzer.py  gemini_multimodal_analyzer.py  hive_analyzer.py  main.py  mcp_server.py  models.py  ollama_analyzer.py  ollama_multimodal_analyzer.py  progress_store.py  prompt_loader.py  repositories.py  schemas.py  scoring.py
app/agents/: __init__.py  base.py  external_agent_client.py  jiwon_agent.py  local_agent.py  multimodal_agent.py  (+1 more)
docs/: IMPLEMENTATION_GUIDE_ANALYSIS_PYTHON.md
tests/: test_analysis_routes.py  test_analysis_service.py  test_artifact_store.py  test_claude_analyzer.py  test_config.py  test_dependencies.py  test_gemini_analyzer.py  test_gemini_multimodal_analyzer.py  test_hive_analyzer.py  test_jiwon_agent.py  test_multimodal_agent.py  test_ollama_agent.py  test_ollama_analyzer.py  test_ollama_multimodal_analyzer.py  test_prompt_loader.py
(+68 files in other folders)
