[project]
name = "fakenews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=1.31.0",
    "httpx>=0.28.1",
    "hyperbrowser==0.90.8",
    "jinja2>=3.1.6",
    "mcp>=1.13.0",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
